# SIGPLAY

./: README.md  floppy_mix_agent.py  main.py  pyproject.toml
.kiro/hooks/: check-python-errors.kiro.hook  py-steering-update.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/audio-playback/: tasks.md
.kiro/specs/floppy-mix/: design.md  requirements.md  tasks.md
.kiro/specs/frequency-visualizer/: design.md  requirements.md  tasks.md
.kiro/specs/lyrics-view/: design.md  requirements.md  tasks.md
.kiro/specs/sigplay-music-player/: tasks.md
.kiro/steering/: product.md  structure.md  tech.md  uv-steering.md
models/: __init__.py  frequency.py  lyrics.py  mix_request.py  track.py
services/: __init__.py  audio_player.py  dj_agent_client.py  lyrics_service.py  music_library.py  spectrum_analyzer.py
styles/: __init__.py  app.tcss
views/: __init__.py  floppy_mix.py  library.py  lyrics.py  meters.py  now_playing.py  visualizer.py
widgets/: __init__.py  ai_dj_dialog.py  floppy_mix_dialog.py  header.py  help_screen.py  instructions_panel.py  mix_progress_panel.py  model_download_screen.py  track_selection_panel.py  whisper_model_screen.py
