[project]
name = "sigplay"
version = "0.0.3"
description = "A retro-modern terminal music player"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=6.5.0",
    "textual-dev>=1.8.0",
    "mutagen>=1.47.0",
    "numpy>=1.26.0",
    "miniaudio>=1.61",
    "pedalboard>=0.9.19",
    "strands-agents[openai]>=1.17.0",
    "strands-agents-tools>=0.2.16",
    "strands-agents-builder>=0.1.10",
]

[project.scripts]
sigplay = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py", "models", "services", "views", "widgets", "styles"]
