[project]
name = "sigplay"
version = "0.0.9"
description = "A retro-modern terminal music player"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [
    { name = "kaumnen" },
]
keywords = ["music", "player", "terminal", "tui", "audio", "textual", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "textual[syntax]>=6.5.0",
    "textual-dev>=1.8.0",
    "mutagen>=1.47.0",
    "numpy>=1.26.0",
    "miniaudio>=1.61",
    "pedalboard>=0.9.19",
    "strands-agents[openai]>=1.17.0",
    "librosa>=0.11.0",
]

[project.scripts]
sigplay = "main:main"

[project.urls]
Homepage = "https://sigplay.com"
Repository = "https://github.com/kaumnen/sigplay"
Issues = "https://github.com/kaumnen/sigplay/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py", "models", "services", "views", "widgets", "styles"]
